tayra/tss/test/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> tss
Rule 1     tss -> stylesheets
Rule 2     stylesheets -> stylesheet
Rule 3     stylesheets -> stylesheets stylesheet
Rule 4     stylesheet -> charset
Rule 5     stylesheet -> cdatas
Rule 6     stylesheet -> import
Rule 7     stylesheet -> namespace
Rule 8     stylesheet -> atrule
Rule 9     stylesheet -> statement
Rule 10    charset -> charset_sym string SEMICOLON
Rule 11    import -> import_sym string mediums SEMICOLON
Rule 12    import -> import_sym string SEMICOLON
Rule 13    import -> import_sym uri mediums SEMICOLON
Rule 14    import -> import_sym uri SEMICOLON
Rule 15    namespace -> namespace_sym nmprefix string SEMICOLON
Rule 16    namespace -> namespace_sym nmprefix uri SEMICOLON
Rule 17    namespace -> namespace_sym string SEMICOLON
Rule 18    namespace -> namespace_sym uri SEMICOLON
Rule 19    nmprefix -> ident
Rule 20    statement -> ruleset
Rule 21    statement -> media
Rule 22    statement -> page
Rule 23    statement -> font_face
Rule 24    statement -> wc
Rule 25    atrule -> atkeyword expr block
Rule 26    atrule -> atkeyword expr SEMICOLON
Rule 27    atrule -> atkeyword block
Rule 28    atrule -> atkeyword SEMICOLON
Rule 29    media -> media_sym mediums openbrace ruleset CLOSEBRACE
Rule 30    media -> media_sym mediums openbrace CLOSEBRACE
Rule 31    mediums -> medium
Rule 32    mediums -> mediums medium
Rule 33    mediums -> mediums comma medium
Rule 34    medium -> ident
Rule 35    medium -> any
Rule 36    page -> page_sym IDENT pseudo_page block
Rule 37    page -> page_sym ident block
Rule 38    page -> page_sym pseudo_page block
Rule 39    pseudo_page -> COLON ident
Rule 40    font_face -> font_face_sym block
Rule 41    ruleset -> block
Rule 42    ruleset -> selectors block
Rule 43    selectors -> selector
Rule 44    selectors -> selectors comma
Rule 45    selectors -> selectors comma selector
Rule 46    selector -> simple_selector
Rule 47    selector -> selector simple_selector
Rule 48    selector -> selector combinator simple_selector
Rule 49    simple_selector -> element_name
Rule 50    simple_selector -> extender
Rule 51    simple_selector -> simple_selector extender
Rule 52    element_name -> ident
Rule 53    element_name -> star
Rule 54    extender -> hash
Rule 55    extender -> class
Rule 56    extender -> attrib
Rule 57    extender -> pseudo
Rule 58    class -> DOT IDENT
Rule 59    class -> DOT IDENT wc
Rule 60    attrib -> opensqr ident attr_oper attr_val closesqr
Rule 61    attrib -> opensqr ident closesqr
Rule 62    attr_oper -> equal
Rule 63    attr_oper -> includes
Rule 64    attr_oper -> dashmatch
Rule 65    attr_val -> ident
Rule 66    attr_val -> string
Rule 67    pseudo -> COLON pseudo_name
Rule 68    pseudo -> COLON COLON pseudo_name
Rule 69    pseudo_name -> ident
Rule 70    pseudo_name -> function simple_selector closeparan
Rule 71    block -> openbrace declarations closebrace
Rule 72    block -> openbrace closebrace
Rule 73    declarations -> declaration
Rule 74    declarations -> declarations semicolon
Rule 75    declarations -> declarations semicolon declaration
Rule 76    declaration -> property colon expr
Rule 77    declaration -> property colon expr prio
Rule 78    property -> star ident
Rule 79    property -> ident
Rule 80    prio -> important_sym
Rule 81    expr -> term
Rule 82    expr -> expr term
Rule 83    expr -> expr operator term
Rule 84    term -> term_data
Rule 85    term -> string
Rule 86    term -> ident
Rule 87    term -> uri
Rule 88    term -> unicoderange
Rule 89    term -> hash
Rule 90    term_data -> term_val
Rule 91    term_data -> unary_oper term_val
Rule 92    term_val -> number
Rule 93    term_val -> percentage
Rule 94    term_val -> ems
Rule 95    term_val -> exs
Rule 96    term_val -> length
Rule 97    term_val -> angle
Rule 98    term_val -> time
Rule 99    term_val -> freq
Rule 100   term_val -> func
Rule 101   func -> function expr closeparan
Rule 102   func -> function closeparan
Rule 103   operator -> fwdslash
Rule 104   operator -> comma
Rule 105   operator -> colon
Rule 106   operator -> dot
Rule 107   operator -> equal
Rule 108   operator -> gt
Rule 109   operator -> lt
Rule 110   operator -> dlimit
Rule 111   unary_oper -> PLUS
Rule 112   unary_oper -> MINUS
Rule 113   combinator -> plus
Rule 114   combinator -> gt
Rule 115   combinator -> tilda
Rule 116   cdatas -> cdata
Rule 117   cdatas -> cdatas cdata
Rule 118   cdata -> cdo cdc
Rule 119   cdata -> cdo expr cdc
Rule 120   charset_sym -> CHARSET_SYM wc
Rule 121   charset_sym -> CHARSET_SYM
Rule 122   import_sym -> IMPORT_SYM wc
Rule 123   import_sym -> IMPORT_SYM
Rule 124   namespace_sym -> NAMESPACE_SYM wc
Rule 125   namespace_sym -> NAMESPACE_SYM
Rule 126   media_sym -> MEDIA_SYM wc
Rule 127   media_sym -> MEDIA_SYM
Rule 128   page_sym -> PAGE_SYM wc
Rule 129   page_sym -> PAGE_SYM
Rule 130   font_face_sym -> FONT_FACE_SYM wc
Rule 131   font_face_sym -> FONT_FACE_SYM
Rule 132   important_sym -> IMPORTANT_SYM wc
Rule 133   important_sym -> IMPORTANT_SYM
Rule 134   atkeyword -> ATKEYWORD wc
Rule 135   atkeyword -> ATKEYWORD
Rule 136   string -> STRING wc
Rule 137   string -> STRING
Rule 138   uri -> URI wc
Rule 139   uri -> URI
Rule 140   function -> FUNCTION wc
Rule 141   function -> FUNCTION
Rule 142   unicoderange -> UNICODERANGE wc
Rule 143   unicoderange -> UNICODERANGE
Rule 144   ident -> IDENT wc
Rule 145   ident -> IDENT
Rule 146   number -> NUMBER wc
Rule 147   number -> NUMBER
Rule 148   percentage -> PERCENTAGE wc
Rule 149   percentage -> PERCENTAGE
Rule 150   ems -> EMS wc
Rule 151   ems -> EMS
Rule 152   exs -> EXS wc
Rule 153   exs -> EXS
Rule 154   length -> LENGTH wc
Rule 155   length -> LENGTH
Rule 156   angle -> ANGLE wc
Rule 157   angle -> ANGLE
Rule 158   time -> TIME wc
Rule 159   time -> TIME
Rule 160   freq -> FREQ wc
Rule 161   freq -> FREQ
Rule 162   fwdslash -> FWDSLASH wc
Rule 163   fwdslash -> FWDSLASH
Rule 164   comma -> COMMA wc
Rule 165   comma -> COMMA
Rule 166   hash -> HASH wc
Rule 167   hash -> HASH
Rule 168   equal -> EQUAL wc
Rule 169   equal -> EQUAL
Rule 170   includes -> INCLUDES wc
Rule 171   includes -> INCLUDES
Rule 172   dashmatch -> DASHMATCH wc
Rule 173   dashmatch -> DASHMATCH
Rule 174   plus -> PLUS wc
Rule 175   plus -> PLUS
Rule 176   gt -> GT wc
Rule 177   gt -> GT
Rule 178   lt -> LT wc
Rule 179   lt -> LT
Rule 180   tilda -> TILDA wc
Rule 181   tilda -> TILDA
Rule 182   colon -> COLON wc
Rule 183   colon -> COLON
Rule 184   semicolon -> SEMICOLON wc
Rule 185   semicolon -> SEMICOLON
Rule 186   star -> STAR wc
Rule 187   star -> STAR
Rule 188   dot -> DOT wc
Rule 189   dot -> DOT
Rule 190   dlimit -> DLIMIT wc
Rule 191   dlimit -> DLIMIT
Rule 192   openbrace -> OPENBRACE wc
Rule 193   openbrace -> OPENBRACE
Rule 194   closebrace -> CLOSEBRACE wc
Rule 195   closebrace -> CLOSEBRACE
Rule 196   opensqr -> OPENSQR wc
Rule 197   opensqr -> OPENSQR
Rule 198   closesqr -> CLOSESQR wc
Rule 199   closesqr -> CLOSESQR
Rule 200   openparan -> OPENPARAN wc
Rule 201   openparan -> OPENPARAN
Rule 202   closeparan -> CLOSEPARAN wc
Rule 203   closeparan -> CLOSEPARAN
Rule 204   wc -> S
Rule 205   wc -> wc S
Rule 206   wc -> COMMENT
Rule 207   wc -> wc COMMENT
Rule 208   cdo -> CDO wc
Rule 209   cdo -> CDO
Rule 210   cdc -> CDC wc
Rule 211   cdc -> CDC
Rule 212   any -> openparan expr closeparan
Rule 213   any -> opensqr expr closesqr

Terminals, with rules where they appear

ANGLE                : 156 157
ATKEYWORD            : 134 135
CDC                  : 210 211
CDO                  : 208 209
CHARSET_SYM          : 120 121
CLOSEBRACE           : 29 30 194 195
CLOSEPARAN           : 202 203
CLOSESQR             : 198 199
COLON                : 39 67 68 68 182 183
COMMA                : 164 165
COMMENT              : 206 207
DASHMATCH            : 172 173
DLIMIT               : 190 191
DOT                  : 58 59 188 189
EMS                  : 150 151
EQUAL                : 168 169
EXS                  : 152 153
FONT_FACE_SYM        : 130 131
FREQ                 : 160 161
FUNCTION             : 140 141
FWDSLASH             : 162 163
GT                   : 176 177
HASH                 : 166 167
IDENT                : 36 58 59 144 145
IMPORTANT_SYM        : 132 133
IMPORT_SYM           : 122 123
INCLUDES             : 170 171
LENGTH               : 154 155
LT                   : 178 179
MEDIA_SYM            : 126 127
MINUS                : 112
NAMESPACE_SYM        : 124 125
NUMBER               : 146 147
OPENBRACE            : 192 193
OPENPARAN            : 200 201
OPENSQR              : 196 197
PAGE_SYM             : 128 129
PERCENTAGE           : 148 149
PLUS                 : 111 174 175
S                    : 204 205
SEMICOLON            : 10 11 12 13 14 15 16 17 18 26 28 184 185
STAR                 : 186 187
STRING               : 136 137
TILDA                : 180 181
TIME                 : 158 159
UNICODERANGE         : 142 143
URI                  : 138 139
error                : 

Nonterminals, with rules where they appear

angle                : 97
any                  : 35
atkeyword            : 25 26 27 28
atrule               : 8
attr_oper            : 60
attr_val             : 60
attrib               : 56
block                : 25 27 36 37 38 40 41 42
cdata                : 116 117
cdatas               : 5 117
cdc                  : 118 119
cdo                  : 118 119
charset              : 4
charset_sym          : 10
class                : 55
closebrace           : 71 72
closeparan           : 70 101 102 212
closesqr             : 60 61 213
colon                : 76 77 105
combinator           : 48
comma                : 33 44 45 104
dashmatch            : 64
declaration          : 73 75
declarations         : 71 74 75
dlimit               : 110
dot                  : 106
element_name         : 49
ems                  : 94
equal                : 62 107
expr                 : 25 26 76 77 82 83 101 119 212 213
exs                  : 95
extender             : 50 51
font_face            : 23
font_face_sym        : 40
freq                 : 99
func                 : 100
function             : 70 101 102
fwdslash             : 103
gt                   : 108 114
hash                 : 54 89
ident                : 19 34 37 39 52 60 61 65 69 78 79 86
import               : 6
import_sym           : 11 12 13 14
important_sym        : 80
includes             : 63
length               : 96
lt                   : 109
media                : 21
media_sym            : 29 30
medium               : 31 32 33
mediums              : 11 13 29 30 32 33
namespace            : 7
namespace_sym        : 15 16 17 18
nmprefix             : 15 16
number               : 92
openbrace            : 29 30 71 72
openparan            : 212
opensqr              : 60 61 213
operator             : 83
page                 : 22
page_sym             : 36 37 38
percentage           : 93
plus                 : 113
prio                 : 77
property             : 76 77
pseudo               : 57
pseudo_name          : 67 68
pseudo_page          : 36 38
ruleset              : 20 29
selector             : 43 45 47 48
selectors            : 42 44 45
semicolon            : 74 75
simple_selector      : 46 47 48 51 70
star                 : 53 78
statement            : 9
string               : 10 11 12 15 17 66 85
stylesheet           : 2 3
stylesheets          : 1 3
term                 : 81 82 83
term_data            : 84
term_val             : 90 91
tilda                : 115
time                 : 98
tss                  : 0
unary_oper           : 91
unicoderange         : 88
uri                  : 13 14 16 18 87
wc                   : 24 59 120 122 124 126 128 130 132 134 136 138 140 142 144 146 148 150 152 154 156 158 160 162 164 166 168 170 172 174 176 178 180 182 184 186 188 190 192 194 196 198 200 202 205 207 208 210

Parsing method: LALR

state 0

    (0) S' -> . tss
    (1) tss -> . stylesheets
    (2) stylesheets -> . stylesheet
    (3) stylesheets -> . stylesheets stylesheet
    (4) stylesheet -> . charset
    (5) stylesheet -> . cdatas
    (6) stylesheet -> . import
    (7) stylesheet -> . namespace
    (8) stylesheet -> . atrule
    (9) stylesheet -> . statement
    (10) charset -> . charset_sym string SEMICOLON
    (116) cdatas -> . cdata
    (117) cdatas -> . cdatas cdata
    (11) import -> . import_sym string mediums SEMICOLON
    (12) import -> . import_sym string SEMICOLON
    (13) import -> . import_sym uri mediums SEMICOLON
    (14) import -> . import_sym uri SEMICOLON
    (15) namespace -> . namespace_sym nmprefix string SEMICOLON
    (16) namespace -> . namespace_sym nmprefix uri SEMICOLON
    (17) namespace -> . namespace_sym string SEMICOLON
    (18) namespace -> . namespace_sym uri SEMICOLON
    (25) atrule -> . atkeyword expr block
    (26) atrule -> . atkeyword expr SEMICOLON
    (27) atrule -> . atkeyword block
    (28) atrule -> . atkeyword SEMICOLON
    (20) statement -> . ruleset
    (21) statement -> . media
    (22) statement -> . page
    (23) statement -> . font_face
    (24) statement -> . wc
    (120) charset_sym -> . CHARSET_SYM wc
    (121) charset_sym -> . CHARSET_SYM
    (118) cdata -> . cdo cdc
    (119) cdata -> . cdo expr cdc
    (122) import_sym -> . IMPORT_SYM wc
    (123) import_sym -> . IMPORT_SYM
    (124) namespace_sym -> . NAMESPACE_SYM wc
    (125) namespace_sym -> . NAMESPACE_SYM
    (134) atkeyword -> . ATKEYWORD wc
    (135) atkeyword -> . ATKEYWORD
    (41) ruleset -> . block
    (42) ruleset -> . selectors block
    (29) media -> . media_sym mediums openbrace ruleset CLOSEBRACE
    (30) media -> . media_sym mediums openbrace CLOSEBRACE
    (36) page -> . page_sym IDENT pseudo_page block
    (37) page -> . page_sym ident block
    (38) page -> . page_sym pseudo_page block
    (40) font_face -> . font_face_sym block
    (204) wc -> . S
    (205) wc -> . wc S
    (206) wc -> . COMMENT
    (207) wc -> . wc COMMENT
    (208) cdo -> . CDO wc
    (209) cdo -> . CDO
    (71) block -> . openbrace declarations closebrace
    (72) block -> . openbrace closebrace
    (43) selectors -> . selector
    (44) selectors -> . selectors comma
    (45) selectors -> . selectors comma selector
    (126) media_sym -> . MEDIA_SYM wc
    (127) media_sym -> . MEDIA_SYM
    (128) page_sym -> . PAGE_SYM wc
    (129) page_sym -> . PAGE_SYM
    (130) font_face_sym -> . FONT_FACE_SYM wc
    (131) font_face_sym -> . FONT_FACE_SYM
    (192) openbrace -> . OPENBRACE wc
    (193) openbrace -> . OPENBRACE
    (46) selector -> . simple_selector
    (47) selector -> . selector simple_selector
    (48) selector -> . selector combinator simple_selector
    (49) simple_selector -> . element_name
    (50) simple_selector -> . extender
    (51) simple_selector -> . simple_selector extender
    (52) element_name -> . ident
    (53) element_name -> . star
    (54) extender -> . hash
    (55) extender -> . class
    (56) extender -> . attrib
    (57) extender -> . pseudo
    (144) ident -> . IDENT wc
    (145) ident -> . IDENT
    (186) star -> . STAR wc
    (187) star -> . STAR
    (166) hash -> . HASH wc
    (167) hash -> . HASH
    (58) class -> . DOT IDENT
    (59) class -> . DOT IDENT wc
    (60) attrib -> . opensqr ident attr_oper attr_val closesqr
    (61) attrib -> . opensqr ident closesqr
    (67) pseudo -> . COLON pseudo_name
    (68) pseudo -> . COLON COLON pseudo_name
    (196) opensqr -> . OPENSQR wc
    (197) opensqr -> . OPENSQR

    CHARSET_SYM     shift and go to state 47
    IMPORT_SYM      shift and go to state 35
    NAMESPACE_SYM   shift and go to state 42
    ATKEYWORD       shift and go to state 13
    S               shift and go to state 33
    COMMENT         shift and go to state 12
    CDO             shift and go to state 44
    MEDIA_SYM       shift and go to state 27
    PAGE_SYM        shift and go to state 39
    FONT_FACE_SYM   shift and go to state 49
    OPENBRACE       shift and go to state 3
    IDENT           shift and go to state 28
    STAR            shift and go to state 1
    HASH            shift and go to state 38
    DOT             shift and go to state 40
    COLON           shift and go to state 20
    OPENSQR         shift and go to state 7

    hash                           shift and go to state 2
    cdo                            shift and go to state 4
    font_face                      shift and go to state 5
    namespace_sym                  shift and go to state 6
    star                           shift and go to state 8
    simple_selector                shift and go to state 9
    element_name                   shift and go to state 10
    atkeyword                      shift and go to state 11
    openbrace                      shift and go to state 14
    media                          shift and go to state 15
    charset                        shift and go to state 16
    namespace                      shift and go to state 17
    font_face_sym                  shift and go to state 18
    stylesheet                     shift and go to state 19
    ruleset                        shift and go to state 21
    statement                      shift and go to state 22
    atrule                         shift and go to state 23
    import                         shift and go to state 24
    tss                            shift and go to state 25
    opensqr                        shift and go to state 26
    wc                             shift and go to state 29
    cdatas                         shift and go to state 30
    selector                       shift and go to state 31
    stylesheets                    shift and go to state 32
    ident                          shift and go to state 34
    extender                       shift and go to state 54
    cdata                          shift and go to state 36
    page_sym                       shift and go to state 37
    class                          shift and go to state 41
    charset_sym                    shift and go to state 43
    pseudo                         shift and go to state 45
    selectors                      shift and go to state 46
    import_sym                     shift and go to state 48
    media_sym                      shift and go to state 50
    attrib                         shift and go to state 51
    page                           shift and go to state 52
    block                          shift and go to state 53

state 1

    (186) star -> STAR . wc
    (187) star -> STAR .
    (204) wc -> . S
    (205) wc -> . wc S
    (206) wc -> . COMMENT
    (207) wc -> . wc COMMENT

    HASH            reduce using rule 187 (star -> STAR .)
    DOT             reduce using rule 187 (star -> STAR .)
    COLON           reduce using rule 187 (star -> STAR .)
    OPENSQR         reduce using rule 187 (star -> STAR .)
    PLUS            reduce using rule 187 (star -> STAR .)
    GT              reduce using rule 187 (star -> STAR .)
    TILDA           reduce using rule 187 (star -> STAR .)
    IDENT           reduce using rule 187 (star -> STAR .)
    STAR            reduce using rule 187 (star -> STAR .)
    COMMA           reduce using rule 187 (star -> STAR .)
    OPENBRACE       reduce using rule 187 (star -> STAR .)
    CLOSEPARAN      reduce using rule 187 (star -> STAR .)
    S               shift and go to state 33
    COMMENT         shift and go to state 12

    wc                             shift and go to state 55

state 2

    (54) extender -> hash .

    HASH            reduce using rule 54 (extender -> hash .)
    DOT             reduce using rule 54 (extender -> hash .)
    COLON           reduce using rule 54 (extender -> hash .)
    OPENSQR         reduce using rule 54 (extender -> hash .)
    PLUS            reduce using rule 54 (extender -> hash .)
    GT              reduce using rule 54 (extender -> hash .)
    TILDA           reduce using rule 54 (extender -> hash .)
    IDENT           reduce using rule 54 (extender -> hash .)
    STAR            reduce using rule 54 (extender -> hash .)
    COMMA           reduce using rule 54 (extender -> hash .)
    OPENBRACE       reduce using rule 54 (extender -> hash .)
    CLOSEPARAN      reduce using rule 54 (extender -> hash .)


state 3

    (192) openbrace -> OPENBRACE . wc
    (193) openbrace -> OPENBRACE .
    (204) wc -> . S
    (205) wc -> . wc S
    (206) wc -> . COMMENT
    (207) wc -> . wc COMMENT

    CLOSEBRACE      reduce using rule 193 (openbrace -> OPENBRACE .)
    STAR            reduce using rule 193 (openbrace -> OPENBRACE .)
    IDENT           reduce using rule 193 (openbrace -> OPENBRACE .)
    OPENBRACE       reduce using rule 193 (openbrace -> OPENBRACE .)
    HASH            reduce using rule 193 (openbrace -> OPENBRACE .)
    DOT             reduce using rule 193 (openbrace -> OPENBRACE .)
    COLON           reduce using rule 193 (openbrace -> OPENBRACE .)
    OPENSQR         reduce using rule 193 (openbrace -> OPENBRACE .)
    S               shift and go to state 33
    COMMENT         shift and go to state 12

    wc                             shift and go to state 56

state 4

    (118) cdata -> cdo . cdc
    (119) cdata -> cdo . expr cdc
    (210) cdc -> . CDC wc
    (211) cdc -> . CDC
    (81) expr -> . term
    (82) expr -> . expr term
    (83) expr -> . expr operator term
    (84) term -> . term_data
    (85) term -> . string
    (86) term -> . ident
    (87) term -> . uri
    (88) term -> . unicoderange
    (89) term -> . hash
    (90) term_data -> . term_val
    (91) term_data -> . unary_oper term_val
    (136) string -> . STRING wc
    (137) string -> . STRING
    (144) ident -> . IDENT wc
    (145) ident -> . IDENT
    (138) uri -> . URI wc
    (139) uri -> . URI
    (142) unicoderange -> . UNICODERANGE wc
    (143) unicoderange -> . UNICODERANGE
    (166) hash -> . HASH wc
    (167) hash -> . HASH
    (92) term_val -> . number
    (93) term_val -> . percentage
    (94) term_val -> . ems
    (95) term_val -> . exs
    (96) term_val -> . length
    (97) term_val -> . angle
    (98) term_val -> . time
    (99) term_val -> . freq
    (100) term_val -> . func
    (111) unary_oper -> . PLUS
    (112) unary_oper -> . MINUS
    (146) number -> . NUMBER wc
    (147) number -> . NUMBER
    (148) percentage -> . PERCENTAGE wc
    (149) percentage -> . PERCENTAGE
    (150) ems -> . EMS wc
    (151) ems -> . EMS
    (152) exs -> . EXS wc
    (153) exs -> . EXS
    (154) length -> . LENGTH wc
    (155) length -> . LENGTH
    (156) angle -> . ANGLE wc
    (157) angle -> . ANGLE
    (158) time -> . TIME wc
    (159) time -> . TIME
    (160) freq -> . FREQ wc
    (161) freq -> . FREQ
    (101) func -> . function expr closeparan
    (102) func -> . function closeparan
    (140) function -> . FUNCTION wc
    (141) function -> . FUNCTION

    CDC             shift and go to state 84
    STRING          shift and go to state 65
    IDENT           shift and go to state 28
    URI             shift and go to state 76
    UNICODERANGE    shift and go to state 78
    HASH            shift and go to state 38
    PLUS            shift and go to state 71
    MINUS           shift and go to state 64
    NUMBER          shift and go to state 77
    PERCENTAGE      shift and go to state 81
    EMS             shift and go to state 62
    EXS             shift and go to state 61
    LENGTH          shift and go to state 68
    ANGLE           shift and go to state 58
    TIME            shift and go to state 75
    FREQ            shift and go to state 92
    FUNCTION        shift and go to state 57

    cdc                            shift and go to state 59
    number                         shift and go to state 60
    hash                           shift and go to state 63
    angle                          shift and go to state 66
    term_data                      shift and go to state 67
    unary_oper                     shift and go to state 69
    term_val                       shift and go to state 70
    percentage                     shift and go to state 72
    function                       shift and go to state 73
    string                         shift and go to state 74
    unicoderange                   shift and go to state 91
    func                           shift and go to state 79
    freq                           shift and go to state 80
    term                           shift and go to state 82
    ident                          shift and go to state 83
    expr                           shift and go to state 85
    uri                            shift and go to state 86
    length                         shift and go to state 87
    exs                            shift and go to state 88
    ems                            shift and go to state 89
    time                           shift and go to state 90

state 5

    (23) statement -> font_face .

    CHARSET_SYM     reduce using rule 23 (statement -> font_face .)
    IMPORT_SYM      reduce using rule 23 (statement -> font_face .)
    NAMESPACE_SYM   reduce using rule 23 (statement -> font_face .)
    ATKEYWORD       reduce using rule 23 (statement -> font_face .)
    S               reduce using rule 23 (statement -> font_face .)
    COMMENT         reduce using rule 23 (statement -> font_face .)
    CDO             reduce using rule 23 (statement -> font_face .)
    MEDIA_SYM       reduce using rule 23 (statement -> font_face .)
    PAGE_SYM        reduce using rule 23 (statement -> font_face .)
    FONT_FACE_SYM   reduce using rule 23 (statement -> font_face .)
    OPENBRACE       reduce using rule 23 (statement -> font_face .)
    IDENT           reduce using rule 23 (statement -> font_face .)
    STAR            reduce using rule 23 (statement -> font_face .)
    HASH            reduce using rule 23 (statement -> font_face .)
    DOT             reduce using rule 23 (statement -> font_face .)
    COLON           reduce using rule 23 (statement -> font_face .)
    OPENSQR         reduce using rule 23 (statement -> font_face .)
    $end            reduce using rule 23 (statement -> font_face .)


state 6

    (15) namespace -> namespace_sym . nmprefix string SEMICOLON
    (16) namespace -> namespace_sym . nmprefix uri SEMICOLON
    (17) namespace -> namespace_sym . string SEMICOLON
    (18) namespace -> namespace_sym . uri SEMICOLON
    (19) nmprefix -> . ident
    (136) string -> . STRING wc
    (137) string -> . STRING
    (138) uri -> . URI wc
    (139) uri -> . URI
    (144) ident -> . IDENT wc
    (145) ident -> . IDENT

    STRING          shift and go to state 65
    URI             shift and go to state 76
    IDENT           shift and go to state 28

    ident                          shift and go to state 93
    string                         shift and go to state 94
    uri                            shift and go to state 95
    nmprefix                       shift and go to state 96

state 7

    (196) opensqr -> OPENSQR . wc
    (197) opensqr -> OPENSQR .
    (204) wc -> . S
    (205) wc -> . wc S
    (206) wc -> . COMMENT
    (207) wc -> . wc COMMENT

    IDENT           reduce using rule 197 (opensqr -> OPENSQR .)
    STRING          reduce using rule 197 (opensqr -> OPENSQR .)
    URI             reduce using rule 197 (opensqr -> OPENSQR .)
    UNICODERANGE    reduce using rule 197 (opensqr -> OPENSQR .)
    HASH            reduce using rule 197 (opensqr -> OPENSQR .)
    PLUS            reduce using rule 197 (opensqr -> OPENSQR .)
    MINUS           reduce using rule 197 (opensqr -> OPENSQR .)
    NUMBER          reduce using rule 197 (opensqr -> OPENSQR .)
    PERCENTAGE      reduce using rule 197 (opensqr -> OPENSQR .)
    EMS             reduce using rule 197 (opensqr -> OPENSQR .)
    EXS             reduce using rule 197 (opensqr -> OPENSQR .)
    LENGTH          reduce using rule 197 (opensqr -> OPENSQR .)
    ANGLE           reduce using rule 197 (opensqr -> OPENSQR .)
    TIME            reduce using rule 197 (opensqr -> OPENSQR .)
    FREQ            reduce using rule 197 (opensqr -> OPENSQR .)
    FUNCTION        reduce using rule 197 (opensqr -> OPENSQR .)
    S               shift and go to state 33
    COMMENT         shift and go to state 12

    wc                             shift and go to state 97

state 8

    (53) element_name -> star .

    HASH            reduce using rule 53 (element_name -> star .)
    DOT             reduce using rule 53 (element_name -> star .)
    COLON           reduce using rule 53 (element_name -> star .)
    OPENSQR         reduce using rule 53 (element_name -> star .)
    PLUS            reduce using rule 53 (element_name -> star .)
    GT              reduce using rule 53 (element_name -> star .)
    TILDA           reduce using rule 53 (element_name -> star .)
    IDENT           reduce using rule 53 (element_name -> star .)
    STAR            reduce using rule 53 (element_name -> star .)
    COMMA           reduce using rule 53 (element_name -> star .)
    OPENBRACE       reduce using rule 53 (element_name -> star .)
    CLOSEPARAN      reduce using rule 53 (element_name -> star .)


state 9

    (46) selector -> simple_selector .
    (51) simple_selector -> simple_selector . extender
    (54) extender -> . hash
    (55) extender -> . class
    (56) extender -> . attrib
    (57) extender -> . pseudo
    (166) hash -> . HASH wc
    (167) hash -> . HASH
    (58) class -> . DOT IDENT
    (59) class -> . DOT IDENT wc
    (60) attrib -> . opensqr ident attr_oper attr_val closesqr
    (61) attrib -> . opensqr ident closesqr
    (67) pseudo -> . COLON pseudo_name
    (68) pseudo -> . COLON COLON pseudo_name
    (196) opensqr -> . OPENSQR wc
    (197) opensqr -> . OPENSQR

  ! shift/reduce conflict for HASH resolved as shift
  ! shift/reduce conflict for DOT resolved as shift
  ! shift/reduce conflict for COLON resolved as shift
  ! shift/reduce conflict for OPENSQR resolved as shift
    PLUS            reduce using rule 46 (selector -> simple_selector .)
    GT              reduce using rule 46 (selector -> simple_selector .)
    TILDA           reduce using rule 46 (selector -> simple_selector .)
    IDENT           reduce using rule 46 (selector -> simple_selector .)
    STAR            reduce using rule 46 (selector -> simple_selector .)
    COMMA           reduce using rule 46 (selector -> simple_selector .)
    OPENBRACE       reduce using rule 46 (selector -> simple_selector .)
    HASH            shift and go to state 38
    DOT             shift and go to state 40
    COLON           shift and go to state 20
    OPENSQR         shift and go to state 7

  ! HASH            [ reduce using rule 46 (selector -> simple_selector .) ]
  ! DOT             [ reduce using rule 46 (selector -> simple_selector .) ]
  ! COLON           [ reduce using rule 46 (selector -> simple_selector .) ]
  ! OPENSQR         [ reduce using rule 46 (selector -> simple_selector .) ]

    hash                           shift and go to state 2
    pseudo                         shift and go to state 45
    extender                       shift and go to state 98
    attrib                         shift and go to state 51
    class                          shift and go to state 41
    opensqr                        shift and go to state 26

state 10

    (49) simple_selector -> element_name .

    HASH            reduce using rule 49 (simple_selector -> element_name .)
    DOT             reduce using rule 49 (simple_selector -> element_name .)
    COLON           reduce using rule 49 (simple_selector -> element_name .)
    OPENSQR         reduce using rule 49 (simple_selector -> element_name .)
    PLUS            reduce using rule 49 (simple_selector -> element_name .)
    GT              reduce using rule 49 (simple_selector -> element_name .)
    TILDA           reduce using rule 49 (simple_selector -> element_name .)
    IDENT           reduce using rule 49 (simple_selector -> element_name .)
    STAR            reduce using rule 49 (simple_selector -> element_name .)
    COMMA           reduce using rule 49 (simple_selector -> element_name .)
    OPENBRACE       reduce using rule 49 (simple_selector -> element_name .)
    CLOSEPARAN      reduce using rule 49 (simple_selector -> element_name .)


state 11

    (25) atrule -> atkeyword . expr block
    (26) atrule -> atkeyword . expr SEMICOLON
    (27) atrule -> atkeyword . block
    (28) atrule -> atkeyword . SEMICOLON
    (81) expr -> . term
    (82) expr -> . expr term
    (83) expr -> . expr operator term
    (71) block -> . openbrace declarations closebrace
    (72) block -> . openbrace closebrace
    (84) term -> . term_data
    (85) term -> . string
    (86) term -> . ident
    (87) term -> . uri
    (88) term -> . unicoderange
    (89) term -> . hash
    (192) openbrace -> . OPENBRACE wc
    (193) openbrace -> . OPENBRACE
    (90) term_data -> . term_val
    (91) term_data -> . unary_oper term_val
    (136) string -> . STRING wc
    (137) string -> . STRING
    (144) ident -> . IDENT wc
    (145) ident -> . IDENT
    (138) uri -> . URI wc
    (139) uri -> . URI
    (142) unicoderange -> . UNICODERANGE wc
    (143) unicoderange -> . UNICODERANGE
    (166) hash -> . HASH wc
    (167) hash -> . HASH
    (92) term_val -> . number
    (93) term_val -> . percentage
    (94) term_val -> . ems
    (95) term_val -> . exs
    (96) term_val -> . length
    (97) term_val -> . angle
    (98) term_val -> . time
    (99) term_val -> . freq
    (100) term_val -> . func
    (111) unary_oper -> . PLUS
    (112) unary_oper -> . MINUS
    (146) number -> . NUMBER wc
    (147) number -> . NUMBER
    (148) percentage -> . PERCENTAGE wc
    (149) percentage -> . PERCENTAGE
    (150) ems -> . EMS wc
    (151) ems -> . EMS
    (152) exs -> . EXS wc
    (153) exs -> . EXS
    (154) length -> . LENGTH wc
    (155) length -> . LENGTH
    (156) angle -> . ANGLE wc
    (157) angle -> . ANGLE
    (158) time -> . TIME wc
    (159) time -> . TIME
    (160) freq -> . FREQ wc
    (161) freq -> . FREQ
    (101) func -> . function expr closeparan
    (102) func -> . function closeparan
    (140) function -> . FUNCTION wc
    (141) function -> . FUNCTION
